[package]
name = "pokepop"
version = "0.1.0"
description = "PokePop - Pokemon Pokedex Tool"
authors = ["ZTMYO"]
edition = "2021"

[lib]
name = "pokepop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"
windows = "0.61"
base64 = "0.22"
